--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,11 @@
+/* colors: 
+   light blue: #39A0ED
+   light green: #36F1CD
+   green: #13C4A3
+   blue gray: #34435E
+   gray: #7DBBC3
+*/
+
 .App {
-  text-align: center;
-}
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
